--- a/ReactionTester.html
+++ b/ReactionTester.html
@@ -9,6 +9,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<style>
+		
+		#box { 
+			width:200px;
+			height:200px;
+			background-color:red;
+			display:none;
+		}
 
 
 	</style>
@@ -18,10 +25,24 @@
 
 <body>
 
-	
+
+	<div id="box"> </div>
+
 	<script type="text/javascript">
-		
-		
+
+
+	document.getElementById("box").onclick=function() {
+		this.style.display="none";
+	}
+
+	var time = Math.random()*5000;
+
+
+	setTimeout(function()) {
+
+	document.getElementById("box").style.display="block";		
+
+	}, time);
 
 	</script>
 
