added random color generator

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
 
 		var clickedTime; var createdTime; var reactionTime;
 
+
+		function getRandomColor() {
+		    var letters = '0123456789ABCDEF'.split('');
+		    var color = '#';
+		    for (var i = 0; i < 6; i++ ) {
+		        color += letters[Math.floor(Math.random() * 16)];
+		    }
+		    return color;
+		}
+		
+
 		function makeBox() {
 
 			createdTime = Date.now();
@@ -60,7 +71,6 @@
 			this.style.display="none";
 			makeBox();
 		}
-
 
 		makeBox();
 
