--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<style>
-		
-		#box { 
-			width:200px;
-			height:200px;
-			background-color:red;
-			display:none;
+	
+		body {
+			font-family: Verdana, Geneva, sans-serif;
 		}
 
+		.bold {
+			font-weight: bold;
+		}
 
 	</style>
 
@@ -25,17 +25,14 @@
 
 <body>
 
-	<p>Your time: <span id="time"></span></p>
-
+	<h1>Test your reactions!</h1>
+	<p>Click on the boxes and circles as quickly as you can!</p>
+	<p class="bold">Your time: <span id="time">0</span>s</p>
 	<div id="box"> </div>
 
 
-
 	<script type="text/javascript">
-
-
 		var clickedTime; var createdTime; var reactionTime;
-
 
 		function getRandomColor() {
 		    var letters = '0123456789ABCDEF'.split('');
@@ -45,17 +42,25 @@
 		    }
 		    return color;
 		}
-		
 
 		function makeBox() {
-
 			createdTime = Date.now();
-			var time = Math.random()*5000;
-
+			var time = Math.random()*3000;
+			var width = Math.random()*200;
+			if(width < 50) {width+=50;}
+			if(height < 50) {height+=50;}
+			var height = Math.random()*200;
+			var radius = Math.random()*100;
 
 			setTimeout(function() {
-
-				document.getElementById("box").style.display="block";		
+				document.getElementById("box").style.backgroundColor=getRandomColor();
+				document.getElementById("box").style.width=width+"px";
+				document.getElementById("box").style.height=height+"px";
+				document.getElementById("box").style.borderRadius=radius+"px";
+				document.getElementById("box").style.display="block";
+				document.getElementById("box").style.position="relative";
+				document.getElementById("box").style.top=(Math.random()*300)+"px";
+				document.getElementById("box").style.left=(Math.random()*500)+"px";		
 
 			}, time);
 
@@ -63,9 +68,7 @@
 
 
 		document.getElementById("box").onclick=function() {
-
 			clickedTime=Date.now();
-
 			reactionTime = (clickedTime-createdTime)/1000;
 			document.getElementById("time").innerHTML = reactionTime;
 			this.style.display="none";
@@ -73,7 +76,6 @@
 		}
 
 		makeBox();
-
 
 	</script>
 
