separated javascript and css

--- a/index.html
+++ b/index.html
@@ -8,17 +8,7 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<style>
-	
-		body {
-			font-family: Verdana, Geneva, sans-serif;
-		}
-
-		.bold {
-			font-weight: bold;
-		}
-
-	</style>
+	<link rel="stylesheet" type="text/css" src="styles.css" href="styles.css"/>
 
 </head>
 
@@ -30,54 +20,7 @@
 	<p class="bold">Your time: <span id="time">0</span>s</p>
 	<div id="box"> </div>
 
-
-	<script type="text/javascript">
-		var clickedTime; var createdTime; var reactionTime;
-
-		function getRandomColor() {
-		    var letters = '0123456789ABCDEF'.split('');
-		    var color = '#';
-		    for (var i = 0; i < 6; i++ ) {
-		        color += letters[Math.floor(Math.random() * 16)];
-		    }
-		    return color;
-		}
-
-		function makeBox() {
-			createdTime = Date.now();
-			var time = Math.random()*3000;
-			var width = Math.random()*200;
-			if(width < 50) {width+=50;}
-			if(height < 50) {height+=50;}
-			var height = Math.random()*200;
-			var radius = Math.random()*100;
-
-			setTimeout(function() {
-				document.getElementById("box").style.backgroundColor=getRandomColor();
-				document.getElementById("box").style.width=width+"px";
-				document.getElementById("box").style.height=height+"px";
-				document.getElementById("box").style.borderRadius=radius+"px";
-				document.getElementById("box").style.display="block";
-				document.getElementById("box").style.position="relative";
-				document.getElementById("box").style.top=(Math.random()*300)+"px";
-				document.getElementById("box").style.left=(Math.random()*500)+"px";		
-
-			}, time);
-
-		}
-
-
-		document.getElementById("box").onclick=function() {
-			clickedTime=Date.now();
-			reactionTime = (clickedTime-createdTime)/1000;
-			document.getElementById("time").innerHTML = reactionTime;
-			this.style.display="none";
-			makeBox();
-		}
-
-		makeBox();
-
-	</script>
+	<script type="text/javascript" src="scripts.js"></script>
 
 </body>
 </html>
